--- a/UI/Admin-Page.html
+++ b/UI/Admin-Page.html
@@ -17,7 +17,7 @@
                    <a href="index.html"><img src="./images/logo-white.png" alt="Xpreschop logo" class="logo"></a>
                    <ul class="main-nav">
                        <li><a href="#section-steps"></a></li>
-                       <li><a href="#login">Post Meal</a></li>
+                       <li><a href="#">Post Meal</a></li>
                        <li><a href="index.html">Log Out</a></li>
                    </ul>
                </div>
